--- a/ldoc.custom.css
+++ b/ldoc.custom.css
@@ -11,7 +11,7 @@ body,
 #main,
 #navigation,
 #content {
-  background: #fffae5;
+  background: #f5f5f5;
 }
 
 #content {
@@ -51,7 +51,7 @@ table.module_list td.name,
 table.module_list td.summary,
 table.function_list td.name,
 table.function_list td.summary {
-  background: #fffae5;
+  background: #dedede;
   border-color: gray;
 }
 a:link, a:visited {
